css/media.css
/* ... */
@media (max-width: 600px) {
  .services__title,
  .help__title,
  .testimonials__title,
  .contacts__title {
    font-size: 22px;
  }

  .services__title img,
  .help__title img,
  .testimonials__title img,
  .contacts__title img {
    width: 9px;
    height: 15px;
  }

  /* HEADER */
  #header__logo {
    width: 102px;
    height: 17px;
  }

  .header__title {
    width: 25rem;
    font-size: 32px;
  }

  /* SERVICES */
  .services__mobile-title {
    font-size: 28px;
    text-align: left;
  }

  .services__mobile-title:before {
    right: 20%;
  }

  .services__mobile-info {
    align-items: flex-start;
    justify-content: flex-start;
  }

  .services__mobile-info picture {
    width: 26.25rem;
    height: 18.6rem;
    margin-bottom: 2rem;
  }

  .services__mobile-info p {
    width: 26.25rem;
    text-align: left;
  }

  .services__mobile-info ul {
    width: 26.25rem;
  }

  /* HELP */

  .help {
    gap: 5rem;
  }

  .help__container-block h3 {
    font-size: 28px;
  }

  /* CONTACTS */

  .contacts {
    height: 27rem;
    padding-top: 44px;
  }

  .contacts__container h3 {
    width: 324px;
    font-size: 22px;
    margin-bottom: 60px;
  }

  .contacts__container-info {
    font-size: 22px;
  }

  /* FOOTER */
  .footer__info,
  .footer__rights {
    font-size: 18px;
  }

  #footer__logo {
    width: 102px;
    height: 17px;
  }
}

@media (max-width: 500px) {
  .services__title,
  .help__title,
  .testimonials__title,
  .contacts__title {
    font-size: 20px;
  }

  .services__title img,
  .help__title img,
  .testimonials__title img,
  .contacts__title img {
    width: 9px;
    height: 14px;
  }

  .header,
  .services,
  .help,
  .partner,
  .testimonials,
  .contacts,
  .footer__info {
    padding: 0 25px;
  }

  /* HEADER */

  .header {
    height: 30rem;
  }

  #header__logo {
    width: 95px;
    height: 15px;
  }

  .header__title {
    width: 21.5rem;
    font-size: 32px;
    line-height: 2.5rem;
  }

  /* SERVICES */
  .services__mobile-title {
    font-size: 24px;
  }
  .services__mobile-title:before {
    right: 1%;
  }

  .services__mobile-info picture {
    width: 344px;
    height: 235px;
    margin-bottom: 20px;
  }

  .services__mobile-info p {
    width: 21.5rem;
    margin-bottom: 50px;
  }

  .services__mobile-info ul,
  .modal__link {
    width: 20rem;
    margin-left: 20px;
  }

  /* ZENNO */

  .zenno__slider-wrapper {
    width: 1000%;
  }

  .zenno__slider-slide p {
    font-size: 32px;
  }

  .zenno__big-logo img {
    width: 164px;
    height: 164px;
  }

  /* HELP */
  .help {
    display: flex;
    justify-content: flex-start;
    gap: 40px;
  }
  .help__title {
    padding-bottom: 40px;
  }
  .help__container-block {
    width: 21.5rem;
  }

  .help__container-block h3 {
    font-size: 32px;
    text-align: left;
  }

  .help__container-block p {
    text-align: left;
    margin: 0;
  }

  #import {
    width: 65px;
    height: 73px;
  }

  #trade,
  #market,
  #business {
    width: 53px;
    height: 53px;
  }

  #product {
    width: 59px;
    height: 53px;
  }

  #finance {
    width: 60px;
    height: 32px;
  }

  /* PARTNER */

  .partner__title {
    width: 16.5rem;
    font-size: 32px;
    line-height: 2.4rem;
  }

  /* TESTIMONIALS */
  .testimonials__container-block {
    width: 100%;
  }

  .testimonials__container-block img {
    width: 168px;
    height: 235px;
  }

  .testimonials__container-block-texts {
    width: 100%;
  }

  /* CONTACTS */

  .contacts {
    height: 27rem;
    padding-top: 2.75rem;
  }

  .contacts__container h3 {
    width: 19rem;
    font-size: 20px;
    margin-bottom: 2rem;
    line-height: 114%;
  }

  .contacts__container-info {
    font-size: 20px;
  }

  /* FOOTER */
  .footer__info,
  .footer__rights {
    font-size: 16px;
  }

  #footer__logo {
    width: 95px;
    height: 15px;
  }
}

@media (max-width: 850px) and (orientation: landscape) {
  .services__title,
  .help__title,
  .testimonials__title,
  .contacts__title {
    font-size: 22px;
  }

  .services__title img,
  .help__title img,
  .testimonials__title img,
  .contacts__title img {
    width: 9px;
    height: 15px;
  }

  /* HEADER */
  #header__logo {
    width: 102px;
    height: 170px;
  }

  .header__title {
    width: 25rem;
    font-size: 32px;
  }

  /* SERVICES */
  .services__mobile-title {
    font-size: 28px;
    text-align: left;
  }

  .services__mobile-title:before {
    right: 20%;
  }

  .services__mobile-info {
    align-items: flex-start;
    justify-content: flex-start;
  }

  .services__mobile-info picture {
    width: 26.25rem;
    height: 18.6rem;
    margin-bottom: 2rem;
  }

  .services__mobile-info p {
    width: 26.25rem;
    text-align: left;
  }

  .services__mobile-info ul,
  .modal__link {
    width: 26.25rem;
    text-align: left;
    margin-left: 20px;
  }

  /* ZENNO */
  .zenno__big-logo img {
    width: 164px;
    height: 164px;
  }

  /* HELP */

  .help {
    gap: 5rem;
  }

  .help__container-block h3 {
    font-size: 28px;
  }

  /* CONTACTS */

  .contacts {
    height: 27rem;
    padding-top: 44px;
  }

  .contacts__container h3 {
    width: 324px;
    font-size: 22px;
    margin-bottom: 60px;
  }

  .contacts__container-info {
    font-size: 22px;
  }

  /* FOOTER */
  .footer__info,
  .footer__rights {
    font-size: 18px;
  }

  #footer__logo {
    width: 102px;
    height: 17px;
  }
}

